--- a/bio.html
+++ b/bio.html
@@ -12,11 +12,19 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <header>
-            <h1 class=heading><a href="index.html">Laneikka Denne</a></h1>
-            <nav>
+      <header class="header">
+        <h1 class="heading heading--mobile"><a href="index.html">Laneikka Denne</a></h1>
+        <div class="header__hamburger">
+            <div class="header__hamburger--line"></div>
+            <div class="header__hamburger--line"></div>
+            <div class="header__hamburger--line"></div>
+        </div>
+
+        <div class="header__wrapper">
+            <h1 class="heading heading--desktop"><a href="index.html">Laneikka Denne</a></h1>
+            <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__list--item"><a class="nav__list--link" href="bio.html">Bio</a></li>
+                    <li class="nav__list--item"><a class="active nav__list--link" href="bio.html">Bio</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Actor</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Art</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Writing</a></li>
@@ -25,9 +33,24 @@
                     <li class="nav__list--item"><a class="nav__list--link" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-        </header>
+            <footer class="nav-footer">
+                <div class="nav-footer__upper">
+                    <ul class="nav-footer__list">
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="mailto:laneikkadenne@hotmail.com"><i class="far fa-envelope"></i></a></li>
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.instagram.com/laneikka/"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.depop.com/laneikka/"><i class="fas fa-store"></i></a></li>
+                    </ul>
+                </div>
+                <div class="nav-footer__lower">
+                    <p class="nav-footer__note">© COPYRIGHT 2020 Laneikka Denne</p>
+                    <p class="nav-footer__note">Site by <a href="https://www.linkedin.com/in/ej-willard/">EJ Willard</a></p>
+                </div>
+            </footer>
+        </div>
+    </header>
         <main>
-            <div class="bio-wrapper">
+            <div class="bio-wrapper page-wrapper">
+              <h2 class="sub-heading">BIO</h2>
                 <p>
                     With a name inspired by the yellow teletubby “Lala” there wasn’t much hope that Laneikka would grow up to be anything but a creative. Laneikka is a Sydney based actor, writer and artist working in film, fashion and photography. 
                     At the heart of all her work is an immense passion to give a voice to the voiceless, by telling stories that aren’t being told. The admiration she has for women in her own life and their own exploration of sexuality, humour and identity is something she continues to grapple with in her work.
@@ -43,7 +66,7 @@
                     She was a recipient of Q Theatre’s 2020 Q Lab grant to undergo developing a new work titled SHITHOLE.
                 </p>
                 <p>
-                    Her photographic series <a href="work.html">"Femmes Fructueuses" (Fruitful Woman)</a> was shortlisted by Aesthetica Magazine.
+                    Her photographic series <a class="link" href="work.html">"Femmes Fructueuses" (Fruitful Woman)</a> was shortlisted by Aesthetica Magazine.
                 </p>
                 <p>
                     She will be travelling to Tokyo, Japan in 2021 as a selected participant in the International Theatre For Young People’s 21st World Congress to develop works with other international theatre-makers.
@@ -54,7 +77,9 @@
 
             </div>
         </main>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/slick.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://kit.fontawesome.com/9b6733193d.js" crossorigin="anonymous"></script>
     </body>
     </html>
