--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
                 <ul class="nav__list">
                     <li class="nav__list--item"><a class="active nav__list--link" href="bio.html">Bio</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Actor</a></li>
-                    <li class="nav__list--item"><a class="nav__list--link" href="work.html">Art</a></li>
+                    <li class="nav__list--item"><a class="nav__list--link" href="art.html">Art</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Writing</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Film</a></li>
                     <li class="nav__list--item"><a class="nav__list--link" href="work.html">Fashion</a></li>
