--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <footer class="nav-footer">
                 <div class="nav-footer__upper">
                     <ul class="nav-footer__list">
-                        <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="mailto:laneikkadenne@hotmail.com"><i class="far fa-envelope"></i></a></li>
+                        <li class="nav-footer__list--item"><a target="_blank" rel="noopener noreferrer" class="nav-footer__list--link" href="mailto:laneikkadenne@hotmail.com"><i class="far fa-envelope"></i></a></li>
                         <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.instagram.com/laneikka/"><i class="fab fa-instagram"></i></a></li>
                         <li class="nav-footer__list--item"><a class="nav-footer__list--link" href="https://www.depop.com/laneikka/"><i class="fas fa-store"></i></a></li>
                     </ul>
